src/objects/SLCA2__CA_Sites__c.object
<CustomObject>
    <description>Connect Sites and Calendars</description>
    <fields>
        <fullName>SLCA2__CA_Calendar__c</fullName>
        <label>CA_Calendar</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_Sites</relationshipLabel>
        <relationshipName>CA_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLCA2__order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLCA2__siteId__c</fullName>
        <label>siteId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CA_Sites</label>
    <nameField>
        <label>CA Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>